package com.garcia.hotelmanager.model;

public enum RoomSize {
	SINGLE, DOUBLE, SUITE
}
